syntax = "proto3";

service PaxosService {
    rpc Prepare(PrepareRequest) returns (PrepareResponse);
	rpc Promise(PromiseRequest) returns (PromiseResponse);
    rpc Accept(AcceptRequest) returns (AcceptResponse);
	rpc Accepted(AcceptedRequest) returns (AcceptedResponse);
}

// Structures
message TmLeases {
	string key = 1;
	repeated string tmIds = 2;
}
// ------------------------------

// Prepare
message PrepareRequest {
	int32 slot = 1;
	int32 epoch = 2;
	string leasesHash = 3; // TODO: implement
}

message PrepareResponse {
	bool ok = 1;
}
// ------------------------------

// Promise
message PromiseRequest {
	int32 slot = 1;
	int32 epoch = 2;
	repeated TmLeases leases = 3; // optional
	repeated TmLeases outLeases = 4; // TODO: implement
}

message PromiseResponse {
	bool ok = 1;
}
// ------------------------------

// Accept
message AcceptRequest {
	int32 slot = 1;
	int32 epoch = 2;
	repeated TmLeases leases = 3;
}

message AcceptResponse {
	bool ok = 1;
}
// ------------------------------

// Accepted
message AcceptedRequest {
	int32 slot = 1;
	int32 epoch = 2;
	repeated TmLeases leases = 3;
}

message AcceptedResponse {
	bool ok = 1;
}
// ------------------------------
